--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <nav class="navbar">
                 <a href="#" class="LogoEnNavbar">Ares Digital Marketing</a>
                 <ul class="menu">
-                    <li><a href="#" target="_blank" >Inicio</a></li>
-                    <li><a href="./pages/nosotros.html" target="_blank" >Nosotros</a></li>
-                    <li><a href="./pages/servicios.html" target="_blank" >Servicios</a></li>
-                    <li><a href="./pages/portfolio.html" target="_blank" >Portfolio</a></li>
-                    <li><a href="./pages/contacto.html" target="_blank" >Contacto</a></li>
+                    <li><a href="#" >Inicio</a></li>
+                    <li><a href="./pages/nosotros.html" >Nosotros</a></li>
+                    <li><a href="./pages/servicios.html" >Servicios</a></li>
+                    <li><a href="./pages/portfolio.html" >Portfolio</a></li>
+                    <li><a href="./pages/contacto.html" >Contacto</a></li>
                 </ul>
             </nav>
         </div>
