--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,10 +13,10 @@
             <nav class="navbar">
                 <a href="#" class="LogoEnNavbar">Ares Digital Marketing</a>
                 <ul class="menu">
-                    <li><a href="../index.html" target="_blank" >Inicio</a></li>
-                    <li><a href="./nosotros.html" target="_blank" >Nosotros</a></li>
-                    <li><a href="./servicios.html" target="_blank" >Servicios</a></li>
-                    <li><a href="./portfolio.html" target="_blank" >Portfolio</a></li>
+                    <li><a href="../index.html" >Inicio</a></li>
+                    <li><a href="./nosotros.html" >Nosotros</a></li>
+                    <li><a href="./servicios.html" >Servicios</a></li>
+                    <li><a href="./portfolio.html" >Portfolio</a></li>
                     <li><a href="#" target="_blank" >Contacto</a></li>
                 </ul>
             </nav>
@@ -88,7 +88,7 @@
 
     <footer>
         <div class="logoFooter">
-            <img src="../assets/img/LogoInfo-desktop.svg" alt="logotipo de la empresa">
+            <img src="../assets/img/LogoInfo-deskgotipo de la empresa">
         </div>
 
         <nav class="menu-footer">
