--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -13,11 +13,11 @@
             <nav class="navbar">
                 <a href="#" class="LogoEnNavbar">Ares Digital Marketing</a>
                 <ul class="menu">
-                    <li><a href="../index.html" target="_blank" >Inicio</a></li>
-                    <li><a href="./nosotros.html" target="_blank" >Nosotros</a></li>
-                    <li><a href="./servicios.html" target="_blank" >Servicios</a></li>
+                    <li><a href="../index.html" >Inicio</a></li>
+                    <li><a href="./nosotros.html" >Nosotros</a></li>
+                    <li><a href="./servicios.html" >Servicios</a></li>
                     <li><a href="#" target="_blank" >Portfolio</a></li>
-                    <li><a href="./contacto.html" target="_blank" >Contacto</a></li>
+                    <li><a href="./contacto.html" >Contacto</a></li>
                 </ul>
             </nav>
         </div>
