Aplicado bootstrap con responsive a un html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <hr class="LineaDivisoraTitulo">
                 <h2>Despegamos tu <br><strong>negocio digital</strong></h2>
                 <div class="LogoEmpresaHome">
-                    <img src="./assets/img/logo.png" alt="logotipo de la empresa">
+                    <img src="./assets/img/logo-img-1.svg" alt="logotipo de la empresa">
                 </div>
             </div>
         </section>
