Aplicado bootstrap con responsive a un html y arreglado problema con distintos navegadores

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,8 @@
                     <li><a href="./nosotros.html" >Nosotros</a></li>
                     <li><a href="./servicios.html" >Servicios</a></li>
                     <li><a href="./portfolio.html" >Portfolio</a></li>
-                    <li><a href="#" target="_blank" >Contacto</a></li>
+                    <li><a href="#" >Contacto</a></li>
+                    <li><a href="./bootstrap.html">Bootstrap</a></li>
                 </ul>
             </nav>
         </div>
@@ -78,7 +79,7 @@
             <hr>
             <p class="texto-contacto">Queremos sumar a nuestro equipo a personas apasionadas por el mundo digital, que disfruten mantenerse al día con las últimas tendencias y novedades del sector.</p>
             <p class="mail"><i class="fa-solid fa-envelope"></i>aresdigitalmarketing@gmail.com</p>
-            <p class="phone"><i class="fa-solid fa-phone"></i> +54 1234-5678</p>
+            <p class="phone"><i class="fa-solid fa-phone"></i> +54 9 11 1234-5678</p>
             <p class="ubi"><i class="fa-solid fa-location-dot"></i>Buenos Aires, Argentina</p>
             <p class="empresa-contacto">AresDigitalMarketing</p>
         </section>
@@ -88,7 +89,7 @@
 
     <footer>
         <div class="logoFooter">
-            <img src="../assets/img/LogoInfo-deskgotipo de la empresa">
+            <img src="../assets/img/LogoInfo-desktop.svg" alt="logotipo de la empresa">
         </div>
 
         <nav class="menu-footer">
@@ -97,7 +98,8 @@
                 <li><a href="./nosotros.html" target="_blank" >Nosotros</a></li>
                 <li><a href="./servicios.html" target="_blank" >Servicios</a></li>
                 <li><a href="./portfolio.html" target="_blank" >Portfolio</a></li>
-                <li><a href="#" target="_blank" >Contacto</a></li>
+                <li><a href="#"  >Contacto</a></li>
+                <li><a href="./bootstrap.html" target="_blank">Bootstrap</a></li>
             </ul>
         </nav>
 
