--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="./pages/servicios.html" >Servicios</a></li>
                     <li><a href="./pages/portfolio.html" >Portfolio</a></li>
                     <li><a href="./pages/contacto.html" >Contacto</a></li>
+                    <li><a href="./pages/bootstrap.html">Bootstrap</a></li>
                 </ul>
             </nav>
         </div>
@@ -96,11 +97,12 @@
 
         <nav class="menu-footer">
             <ul>
-                <li><a href="#" target="_blank" >Inicio</a></li>
+                <li><a href="#"  >Inicio</a></li>
                 <li><a href="./pages/nosotros.html" target="_blank" >Nosotros</a></li>
                 <li><a href="./pages/servicios.html" target="_blank" >Servicios</a></li>
                 <li><a href="./pages/portfolio.html" target="_blank" >Portfolio</a></li>
                 <li><a href="./pages/contacto.html" target="_blank" >Contacto</a></li>
+                <li><a href="./pages/bootstrap.html" target="_blank">Bootstrap</a></li>
             </ul>
         </nav>
 
