--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -15,10 +15,11 @@
                 <a href="#" class="LogoEnNavbar">Ares Digital Marketing</a>
                 <ul class="menu">
                     <li><a href="../index.html" >Inicio</a></li>
-                    <li><a href="#" target="_blank" >Nosotros</a></li>
+                    <li><a href="#"  >Nosotros</a></li>
                     <li><a href="./servicios.html" >Servicios</a></li>
                     <li><a href="./portfolio.html" >Portfolio</a></li>
                     <li><a href="./contacto.html" >Contacto</a></li>
+                    <li><a href="./bootstrap.html">Bootstrap</a></li>
                 </ul>
             </nav>
         </div>
@@ -125,10 +126,11 @@
             <nav class="menu-footer">
                 <ul>
                     <li><a href="../index.html" target="_blank" >Inicio</a></li>
-                    <li><a href="#" target="_blank" >Nosotros</a></li>
+                    <li><a href="#"  >Nosotros</a></li>
                     <li><a href="./servicios.html" target="_blank" >Servicios</a></li>
                     <li><a href="./portfolio.html" target="_blank" >Portfolio</a></li>
                     <li><a href="./contacto.html" target="_blank" >Contacto</a></li>
+                    <li><a href="./bootstrap.html" target="_blank">Bootstrap</a></li>
                 </ul>
             </nav>
     
