--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -16,8 +16,9 @@
                     <li><a href="../index.html" >Inicio</a></li>
                     <li><a href="./nosotros.html" >Nosotros</a></li>
                     <li><a href="./servicios.html" >Servicios</a></li>
-                    <li><a href="#" target="_blank" >Portfolio</a></li>
+                    <li><a href="#" >Portfolio</a></li>
                     <li><a href="./contacto.html" >Contacto</a></li>
+                    <li><a href="./bootstrap.html">Bootstrap</a></li>
                 </ul>
             </nav>
         </div>
@@ -108,11 +109,12 @@
 
         <nav class="menu-footer">
             <ul>
-                <li><a href="../index.html" target="_blank" >Inicio</a></li>
-                <li><a href="./nosotros.html" target="_blank" >Nosotros</a></li>
-                <li><a href="./servicios.html" target="_blank" >Servicios</a></li>
-                <li><a href="#" target="_blank" >Portfolio</a></li>
-                <li><a href="./contacto.html" target="_blank" >Contacto</a></li>
+                <li><a href="../index.html"  >Inicio</a></li>
+                <li><a href="./nosotros.html"  >Nosotros</a></li>
+                <li><a href="./servicios.html"  >Servicios</a></li>
+                <li><a href="#"  >Portfolio</a></li>
+                <li><a href="./contacto.html"  >Contacto</a></li>
+                <li><a href="./bootstrap.html">Bootstrap</a></li>
             </ul>
         </nav>
 
