--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -33,7 +33,7 @@
 
         <section class="Service-Foto">
             <div class="service-box">
-                <h2>Servicio que ofrecemos</h2>
+                <h2>Servicios que ofrecemos</h2>
             </div>            
         </section>
 
@@ -101,7 +101,7 @@
             <ul>
                 <li><a href="../index.html" target="_blank" >Inicio</a></li>
                 <li><a href="./nosotros.html" target="_blank" >Nosotros</a></li>
-                <li><a href="#" target="_blank" >Servicios</a></li>
+                <li><a href="#"  >Servicios</a></li>
                 <li><a href="./portfolio.html" target="_blank" >Portfolio</a></li>
                 <li><a href="./contacto.html" target="_blank" >Contacto</a></li>
             </ul>
