Responsive hecho, falta menu hamburguesa en dispositivo chicos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -70,7 +70,7 @@
                 </p>
             </form>
             <div class="ubicacion-mapa">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.63740862377!2d-58.44939038800183!3d-34.56273487285639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5cec716ddf1%3A0xa07048e1ecdc6a4a!2sArribe%C3%B1os%201630%2C%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1723093473441!5m2!1ses!2sar" width="1284" height="760" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe id="GoogleMapsIframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.63740862377!2d-58.44939038800183!3d-34.56273487285639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5cec716ddf1%3A0xa07048e1ecdc6a4a!2sArribe%C3%B1os%201630%2C%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1723093473441!5m2!1ses!2sar" width="1284" height="760" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
             
