No realice MenuHamburguesa me dio miedo romper el codigo, no lo entendi, Realice Responsive a la pagina Contacto (falta el MenuHambur), Empece con responsive a la HomePage, 1024px terminada, 1440px continuar y luego bajar de resoluciones

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <article class="Contenido-Dos-Home">
                 <h3><strong>Juntos</strong> contruimos el camino hacia el <strong>éxito de tu empresa</strong>, con compromiso y profesionalismo. </h3>
                 <div class="FotoArticle1">
-                    <img src="./assets/img/desktop/montaña-desktop.svg" alt="hombre en la cima de una montaña">
+                    <img src="./assets/img/montaña.png" alt="hombre en la cima de una montaña">
                 </div>
                 <div class="ProyectosBox">
                     <p> <i class="fa-solid fa-arrow-up"> </i>300 + <br> Proyectos realizados</p>
@@ -92,7 +92,7 @@
 
     <footer>
         <div class="logoFooter">
-            <img src="./assets/img/LogoInfo-desktop.svg" alt="logotipo de la empresa">
+            <img src="./assets/img/logo-info-vertical.svg" alt="logotipo de la empresa">
         </div>
 
         <nav class="menu-footer">
@@ -109,7 +109,7 @@
         <div class="redes-footer">
             <h3>Nuestras Redes</h3>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></a></i>
-            <a href="https://www.facebook.com/"target="_blank"><i class="fa-brands fa-facebook"></a></i>
+            <a href="https://www.facebook.com/"target="_blank"><i class="fa-brands fa-facebook" id="logo-facebook"></a></i>
             <a href="https://www.linkedin.com/"target="_blank"><i class="fa-brands fa-linkedin-in"></a></i>
         </div>
 
