--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,22 +6,23 @@
     <title>Contacto - Ares Digital Marketing</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 </head>
 <body>
     <header>
-        <div>
             <nav class="navbar">
                 <a href="#" class="LogoEnNavbar">Ares Digital Marketing</a>
-                <ul class="menu">
-                    <li><a href="../index.html" >Inicio</a></li>
-                    <li><a href="./nosotros.html" >Nosotros</a></li>
-                    <li><a href="./servicios.html" >Servicios</a></li>
-                    <li><a href="./portfolio.html" >Portfolio</a></li>
-                    <li><a href="#" >Contacto</a></li>
-                    <li><a href="./bootstrap.html">Bootstrap</a></li>
-                </ul>
+                <div class="navbar__div">
+                    <ul class="menu">
+                        <li><a href="../index.html" >Inicio</a></li>
+                        <li><a href="./nosotros.html" >Nosotros</a></li>
+                        <li><a href="./servicios.html" >Servicios</a></li>
+                        <li><a href="./portfolio.html" >Portfolio</a></li>
+                        <li><a href="#" >Contacto</a></li>
+                        <li><a href="./bootstrap.html">Bootstrap</a></li>
+                    </ul>
+                </div>
             </nav>
-        </div>
     </header>
     <main>
         <section class="Titulo">
@@ -89,7 +90,7 @@
 
     <footer>
         <div class="logoFooter">
-            <img src="../assets/img/LogoInfo-desktop.svg" alt="logotipo de la empresa">
+            <img src="../assets/img/logo-info-vertical.svg" alt="logotipo de la empresa">
         </div>
 
         <nav class="menu-footer">
@@ -106,7 +107,7 @@
         <div class="redes-footer">
             <h3>Nuestras Redes</h3>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></a></i>
-            <a href="https://www.facebook.com/"target="_blank"><i class="fa-brands fa-facebook"></a></i>
+            <a href="https://www.facebook.com/"target="_blank"><i class="fa-brands fa-facebook" id="logo-facebook"></a></i>
             <a href="https://www.linkedin.com/"target="_blank"><i class="fa-brands fa-linkedin-in"></a></i>
         </div>
 
