Aplicando-SASS (finalizado HomePage,Footer,Navbar ya con menu-burguer, aplicarlo a las demas paginas)

--- a/index.html
+++ b/index.html
@@ -8,19 +8,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
-    <header>
-        <div>
-            <nav class="navbar">
-                <a href="#" class="LogoEnNavbar">Ares Digital Marketing</a>
-                <ul class="menu">
-                    <li><a href="#" >Inicio</a></li>
-                    <li><a href="./pages/nosotros.html" >Nosotros</a></li>
-                    <li><a href="./pages/servicios.html" >Servicios</a></li>
-                    <li><a href="./pages/portfolio.html" >Portfolio</a></li>
-                    <li><a href="./pages/contacto.html" >Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header class="header">
+        <nav class="navbar-menu">
+            <a  class="logo" href="#">Ares Digital Marketing</a>
+
+            <label class="label_hamburguesa" for="menu_hamburguesa">
+                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list_icon" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+                </svg>
+            </label>
+            <input class="menu_hamburguesa" type="checkbox" name="" id="menu_hamburguesa">
+            <ul class="ul_links">
+                <li class="li_links">
+                    <a class="link" href="#">Inicio</a>
+                </li>
+                <li class="li_links">
+                    <a class="link" href="./pages/Nosotros.html">Nosotros</a>
+                </li>
+                <li class="li_links">
+                    <a class="link" href="./pages/Servicios.html">Servicios</a>
+                </li>
+                <li class="li_links">
+                    <a class="link" href="./pages/Portfolio.html">Portfolio</a>
+                </li>
+                <li class="li_links">
+                    <a class="link" href="./pages/Contacto.html">Contacto</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -28,7 +43,7 @@
             <div class="grid-titulo">
                 <h1>Empresa de Marketing Digital</h1>
                 <hr class="LineaDivisoraTitulo">
-                <h2>Despegamos tu <br><strong>negocio digital</strong></h2>
+                <h2>Despegamos tu <strong>negocio digital</strong></h2>
                 <div class="LogoEmpresaHome">
                     <img src="./assets/img/logo-img-1.svg" alt="logotipo de la empresa">
                 </div>
@@ -101,7 +116,6 @@
                 <li><a href="./pages/servicios.html" target="_blank" >Servicios</a></li>
                 <li><a href="./pages/portfolio.html" target="_blank" >Portfolio</a></li>
                 <li><a href="./pages/contacto.html" target="_blank" >Contacto</a></li>
-                <li><a href="./pages/bootstrap.html" target="_blank">Bootstrap</a></li>
             </ul>
         </nav>
 
